--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
   <span class="pl-k">return</span> <span class="pl-c1">0</span>;
 }</pre></div>
 
-<p>This would return <code>\x1b[0;32mMy number is \x1b[0;92m5\x1b[0;39m\n</code>,
-Printing str in <em>dark green</em> and num in <em>light green</em></p>
+<p>This would return <code>\x1b[0;32mMy number is \x1b[0;92m5\x1b[0;39m\n</code><br />
+Printing str in <em style="color:#002200;">dark green</em> and num in <em style="color:#00ff00">light green</em></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/sk-5">sk-5</a></p>
