--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 }</pre></div>
 
 <p>This would return <code>\x1b[0;32mMy number is \x1b[0;92m5\x1b[0;39m\n</code><br />
-Printing str in <em style="color:#002200;">dark green</em> and num in <em style="color:#00ff00">light green</em></p>
+Printing str in <em style="color:#008800; font-weight:bold;">dark green</em> and num in <em style="color:#00ff00; font-weight:bold;">light green</em></p>
       </section>
       <footer>
         <p>This project is maintained by <a href="https://github.com/sk-5">sk-5</a></p>
