--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 }</pre></div>
 
 <p>This would return <code>\x1b[0;32mMy number is \x1b[0;92m5\x1b[0;39m\n</code><br />
+Or : <em style="color:#008800; font-weight:bold;">My number is</em><em style="color:#00cc00; font-weight:bold;">5</em>.<br />
 Printing str in <em style="color:#008800; font-weight:bold;">dark green</em> and num in <em style="color:#00ff00; font-weight:bold;">light green</em></p>
       </section>
       <footer>
