--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
 <ul>
 <li>[x] Remove std::map requirement</li>
-<li>[x] Remove boost requirement without forcing <code>-std=c++11</code><br />(Reduced size from 1.2M to 97K)
+<li>[x] Remove boost requirement without forcing <code>-std=c++11</code><br />  - (Reduced size from 1.2M to 97K)
 </li>
 </ul>
 
